{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 1779,
  "lineage": "21ad143f-421d-6830-aae5-ebfd698d79db",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098c93bd9d119c051",
            "arn": "arn:aws:ec2:eu-central-1:884314848330:instance/i-0c93de425f9725eac",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c93de425f9725eac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "OpenVPN_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2a6d992082d3c59",
            "private_dns": "ip-10-0-1-73.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ceb8e06f92f60941",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0d1f41e530ba2b8",
            "tags": {
              "Name": "EC2-A"
            },
            "tags_all": {
              "Name": "EC2-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02682d545cd325252"
            ]
          },
          "dependencies": [
            "aws_security_group.EC2-A_SG",
            "aws_subnet.VPC-A_private-subnet",
            "aws_vpc.Client_VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-B-Router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0111c5910da90c2a7",
            "arn": "arn:aws:ec2:eu-west-3:884314848330:instance/i-0f4ee10bc1e99dc82",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f4ee10bc1e99dc82",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "OpenVPN_key2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08cb40f0bca23142f",
            "private_dns": "ip-20-0-2-109.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.2.109",
            "public_ip": "13.38.81.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-083523adca2a3f464",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e1be97f484f569c6",
            "tags": {
              "Name": "EC2-B-Router"
            },
            "tags_all": {
              "Name": "EC2-B-Router"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068ea692f2ff08b67"
            ]
          },
          "dependencies": [
            "aws_security_group.EC2-B-Router_SG",
            "aws_subnet.VPC_B_public_subnet",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0111c5910da90c2a7",
            "arn": "arn:aws:ec2:eu-west-3:884314848330:instance/i-019425e2930fc8a4a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019425e2930fc8a4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "OpenVPN_key2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c59a556e0818c157",
            "private_dns": "ip-20-0-1-161.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.1.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08d07a3affdca066e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a94532c3da28ed16",
            "tags": {
              "Name": "EC2-C"
            },
            "tags_all": {
              "Name": "EC2-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd06dbfc699d2353"
            ]
          },
          "dependencies": [
            "aws_security_group.EC2-C_SG",
            "aws_subnet.VPC-B_Private_Subnet",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "VPC-B_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:internet-gateway/igw-0066be21b62c2a697",
            "id": "igw-0066be21b62c2a697",
            "owner_id": "884314848330",
            "tags": {
              "Name": "VPC-B_IGW"
            },
            "tags_all": {
              "Name": "VPC-B_IGW"
            },
            "vpc_id": "vpc-07bc18c344121d182"
          },
          "dependencies": [
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ENI_VPC-B_public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:network-interface/eni-017ee9af3d39ddd7a",
            "attachment": [
              {
                "attachment_id": "eni-attach-08cd0d8826d128e11",
                "device_index": 1,
                "instance": "i-0f4ee10bc1e99dc82"
              }
            ],
            "id": "eni-017ee9af3d39ddd7a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:f8:f3:5f:7a:81",
            "owner_id": "884314848330",
            "private_ip": "20.0.2.21",
            "private_ip_list": [
              "20.0.2.21"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.0.2.21"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-068ea692f2ff08b67"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e1be97f484f569c6",
            "tags": {
              "Name": "ENI_EC2-B-Router"
            },
            "tags_all": {
              "Name": "ENI_EC2-B-Router"
            }
          },
          "dependencies": [
            "aws_instance.EC2-B-Router",
            "aws_security_group.EC2-B-Router_SG",
            "aws_subnet.VPC_B_public_subnet",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r1_VPC-B_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03be4ace4dad55957179966490",
            "instance_id": "i-0f4ee10bc1e99dc82",
            "instance_owner_id": "884314848330",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-017ee9af3d39ddd7a",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03be4ace4dad55957",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.EC2-B-Router",
            "aws_network_interface.ENI_VPC-B_public-subnet",
            "aws_route_table.VPC-B_private-subnet_RT",
            "aws_security_group.EC2-B-Router_SG",
            "aws_subnet.VPC_B_public_subnet",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r1_VPC-B_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0066be21b62c2a697",
            "id": "r-rtb-07638ecb85facf4fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07638ecb85facf4fa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.VPC-B_IGW",
            "aws_route_table.VPC-B_public-subnet_RT",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-A_private-subnet_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:884314848330:route-table/rtb-0c7ac747427fdbddb",
            "id": "rtb-0c7ac747427fdbddb",
            "owner_id": "884314848330",
            "propagating_vgws": [
              "vgw-0ec32807ccac0d86d"
            ],
            "route": [],
            "tags": {
              "Name": "VPC-A_private-subnet_RT"
            },
            "tags_all": {
              "Name": "VPC-A_private-subnet_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-020b4dab84a287809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Client_VPC-A",
            "aws_vpn_gateway.VPC-A_VPGW"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-B_private-subnet_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:route-table/rtb-03be4ace4dad55957",
            "id": "rtb-03be4ace4dad55957",
            "owner_id": "884314848330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-B_private-subnet_RT"
            },
            "tags_all": {
              "Name": "VPC-B_private-subnet_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bc18c344121d182"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-B_public-subnet_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:route-table/rtb-07638ecb85facf4fa",
            "id": "rtb-07638ecb85facf4fa",
            "owner_id": "884314848330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-B_public-subnet_RT"
            },
            "tags_all": {
              "Name": "VPC-B_public-subnet_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bc18c344121d182"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "VPC-A_private-subnet_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe4cde0ec59a9133",
            "route_table_id": "rtb-0c7ac747427fdbddb",
            "subnet_id": "subnet-0f0d1f41e530ba2b8"
          },
          "dependencies": [
            "aws_route_table.VPC-A_private-subnet_RT",
            "aws_subnet.VPC-A_private-subnet",
            "aws_vpc.Client_VPC-A",
            "aws_vpn_gateway.VPC-A_VPGW"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "VPC-B_private-subnet_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a6b621d812cede7",
            "route_table_id": "rtb-03be4ace4dad55957",
            "subnet_id": "subnet-0a94532c3da28ed16"
          },
          "dependencies": [
            "aws_route_table.VPC-B_private-subnet_RT",
            "aws_subnet.VPC-B_Private_Subnet",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "VPC-B_public-subnet_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077efb8925d583a0c",
            "route_table_id": "rtb-07638ecb85facf4fa",
            "subnet_id": "subnet-0e1be97f484f569c6"
          },
          "dependencies": [
            "aws_route_table.VPC-B_public-subnet_RT",
            "aws_subnet.VPC_B_public_subnet",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2-A_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:884314848330:security-group/sg-02682d545cd325252",
            "description": "Allow ICMP and TCP traffic from VPC-B",
            "egress": [],
            "id": "sg-02682d545cd325252",
            "ingress": [],
            "name": "EC2-A_SG",
            "name_prefix": "",
            "owner_id": "884314848330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-A_SG"
            },
            "tags_all": {
              "Name": "EC2-A_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-020b4dab84a287809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Client_VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2-B-Router_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group/sg-068ea692f2ff08b67",
            "description": "Allow SSH from Internet, ICMP and TCP traffic from VPC-A \u0026 VPC-B",
            "egress": [],
            "id": "sg-068ea692f2ff08b67",
            "ingress": [],
            "name": "EC2-B-Router_SG",
            "name_prefix": "",
            "owner_id": "884314848330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-B-Router_SG"
            },
            "tags_all": {
              "Name": "EC2-B-Router_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bc18c344121d182"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2-C_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group/sg-0fd06dbfc699d2353",
            "description": "Allow SSH from EC2-B-Router, ICMP and TCP traffic from VPC-A \u0026 VPC-B",
            "egress": [],
            "id": "sg-0fd06dbfc699d2353",
            "ingress": [],
            "name": "EC2-C_SG",
            "name_prefix": "",
            "owner_id": "884314848330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-C_SG"
            },
            "tags_all": {
              "Name": "EC2-C_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bc18c344121d182"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPC-A_private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:884314848330:subnet/subnet-0f0d1f41e530ba2b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0d1f41e530ba2b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884314848330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A_private-subnet"
            },
            "tags_all": {
              "Name": "VPC-A_private-subnet"
            },
            "vpc_id": "vpc-020b4dab84a287809"
          },
          "dependencies": [
            "aws_vpc.Client_VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPC-B_Private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:subnet/subnet-0a94532c3da28ed16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a94532c3da28ed16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884314848330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-B_Private_Subnet"
            },
            "tags_all": {
              "Name": "VPC-B_Private_Subnet"
            },
            "vpc_id": "vpc-07bc18c344121d182"
          },
          "dependencies": [
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPC_B_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:subnet/subnet-0e1be97f484f569c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1be97f484f569c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884314848330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC_B_public_subnet"
            },
            "tags_all": {
              "Name": "VPC_B_public_subnet"
            },
            "vpc_id": "vpc-07bc18c344121d182"
          },
          "dependencies": [
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Client_VPC-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:884314848330:vpc/vpc-020b4dab84a287809",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc7c4e992a3f82ec",
            "default_route_table_id": "rtb-0c48bed4274097da5",
            "default_security_group_id": "sg-0b3671488a336fbc6",
            "dhcp_options_id": "dopt-02ebff2693e91764b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020b4dab84a287809",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c48bed4274097da5",
            "owner_id": "884314848330",
            "tags": {
              "Name": "Client_VPC-A"
            },
            "tags_all": {
              "Name": "Client_VPC-A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Partner_VPC-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:vpc/vpc-07bc18c344121d182",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-08ccde532c53f8699",
            "default_route_table_id": "rtb-03298d417ae7a721a",
            "default_security_group_id": "sg-0d9a10c317e3d2981",
            "dhcp_options_id": "dopt-0a6479f30a0a9cfc2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07bc18c344121d182",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03298d417ae7a721a",
            "owner_id": "884314848330",
            "tags": {
              "Name": "Partner_VPC-B"
            },
            "tags_all": {
              "Name": "Partner_VPC-B"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_EC2-A_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:884314848330:security-group-rule/sgr-03423544133c9f25d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03423544133c9f25d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02682d545cd325252",
            "security_group_rule_id": "sgr-03423544133c9f25d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-A_SG",
            "aws_vpc.Client_VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_EC2-B_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-0e54d4fabf8dc8403",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e54d4fabf8dc8403",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-068ea692f2ff08b67",
            "security_group_rule_id": "sgr-0e54d4fabf8dc8403",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-B-Router_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_EC2-C_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-0de1063791024635e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0de1063791024635e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd06dbfc699d2353",
            "security_group_rule_id": "sgr-0de1063791024635e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-C_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ICMP_EC2-A_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:884314848330:security-group-rule/sgr-0ecb7c1faf72f86ef",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0ecb7c1faf72f86ef",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02682d545cd325252",
            "security_group_rule_id": "sgr-0ecb7c1faf72f86ef",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-A_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ICMP_EC2-B_SG_VPC-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-0bd948899dfb513f7",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0bd948899dfb513f7",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-068ea692f2ff08b67",
            "security_group_rule_id": "sgr-0bd948899dfb513f7",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-B-Router_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ICMP_EC2-B_SG_VPC-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-07d4e5d14d9c1bc07",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-07d4e5d14d9c1bc07",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-068ea692f2ff08b67",
            "security_group_rule_id": "sgr-07d4e5d14d9c1bc07",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-B-Router_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ICMP_EC2-C_SG_VPC-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-06da6ea450d27619e",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-06da6ea450d27619e",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd06dbfc699d2353",
            "security_group_rule_id": "sgr-06da6ea450d27619e",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-C_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ICMP_EC2-C_SG_VPC-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-04dc3e56c1667f4c2",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-04dc3e56c1667f4c2",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd06dbfc699d2353",
            "security_group_rule_id": "sgr-04dc3e56c1667f4c2",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-C_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_SSH_EC2-A_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:884314848330:security-group-rule/sgr-040eed9eb511389e3",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-040eed9eb511389e3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02682d545cd325252",
            "security_group_rule_id": "sgr-040eed9eb511389e3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-A_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_SSH_EC2-B_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-0fbac21533bed9e9e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0fbac21533bed9e9e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-068ea692f2ff08b67",
            "security_group_rule_id": "sgr-0fbac21533bed9e9e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-B-Router_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_SSH_EC2-C_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-0b50130e5f725320f",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b50130e5f725320f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd06dbfc699d2353",
            "security_group_rule_id": "sgr-0b50130e5f725320f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-C_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTPS_EC2-A_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:884314848330:security-group-rule/sgr-0cb33ca0c16219668",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0cb33ca0c16219668",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02682d545cd325252",
            "security_group_rule_id": "sgr-0cb33ca0c16219668",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-A_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTPS_EC2-B_SG_VPC-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-04ec5d92dc47671bc",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-04ec5d92dc47671bc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-068ea692f2ff08b67",
            "security_group_rule_id": "sgr-04ec5d92dc47671bc",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-B-Router_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTPS_EC2-B_SG_VPC-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-090c0481c02031cd6",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-090c0481c02031cd6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-068ea692f2ff08b67",
            "security_group_rule_id": "sgr-090c0481c02031cd6",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-B-Router_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTPS_EC2-C_SG_VPC-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-0b66c7a5539b977bf",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0b66c7a5539b977bf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd06dbfc699d2353",
            "security_group_rule_id": "sgr-0b66c7a5539b977bf",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-C_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTPS_EC2-C_SG_VPC-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-03094e85c5c03be49",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-03094e85c5c03be49",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd06dbfc699d2353",
            "security_group_rule_id": "sgr-03094e85c5c03be49",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-C_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTP_EC2-A_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:884314848330:security-group-rule/sgr-0a1fe7476164e5797",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a1fe7476164e5797",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02682d545cd325252",
            "security_group_rule_id": "sgr-0a1fe7476164e5797",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-A_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTP_EC2-B_SG_VPC-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-0471efec65c70a6c0",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0471efec65c70a6c0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-068ea692f2ff08b67",
            "security_group_rule_id": "sgr-0471efec65c70a6c0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-B-Router_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTP_EC2-B_SG_VPC-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-0fd4ffbf696260c2a",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0fd4ffbf696260c2a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-068ea692f2ff08b67",
            "security_group_rule_id": "sgr-0fd4ffbf696260c2a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-B-Router_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTP_EC2-C_SG_VPC-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-06f7c7c88565b4026",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06f7c7c88565b4026",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd06dbfc699d2353",
            "security_group_rule_id": "sgr-06f7c7c88565b4026",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-C_SG",
            "aws_vpc.Client_VPC-A",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_TCP_HTTP_EC2-C_SG_VPC-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:884314848330:security-group-rule/sgr-02b643ee277631312",
            "cidr_ipv4": "20.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02b643ee277631312",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd06dbfc699d2353",
            "security_group_rule_id": "sgr-02b643ee277631312",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2-C_SG",
            "aws_vpc.Partner_VPC-B"
          ]
        }
      ]
    }
  ]
}